changed model name
