# api/swagger/swagger.yaml
@@ -65,13 +65,13 @@ paths:
               type: string
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /api/v1/plants:
+  /api/v1/refplants:
     get:
       tags:
-        - "plant"
-      operationId: "getPlants"
+        - "refplant"
+      operationId: "getRefPlants"
       description: "find reference plants by parameters or all"
-      summary: "find plants"
+      summary: "find reference plants"
       consumes:
         - "application/json"
       produces:
@@ -129,7 +129,7 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Plant"
+              $ref: "#/definitions/RefPlant"
         "400":
           description: "Invalid input"
         "404":
@@ -186,19 +186,19 @@ paths:
     #       description: "Plant not found"
     #     "405":
     #       description: "Validation exception"
-  /api/v1/plant/{id}:
+  /api/v1/refplant/{id}:
     get:
       tags:
-        - "plant"
-      summary: "Find plant by ID"
+        - "refplant"
+      summary: "Find reference plant by ID"
       description: "Returns a single reference plant"
-      operationId: "getPlantById"
+      operationId: "getRefPlantById"
       produces:
         - "application/json"
       parameters:
         - name: "id"
           in: "path"
-          description: "ID of plant to return"
+          description: "ID of reference plant to return"
           required: true
           type: "integer"
           format: "int64"
@@ -206,7 +206,7 @@ paths:
         "200":
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Plant"
+            $ref: "#/definitions/RefPlant"
         "400":
           description: "Invalid ID supplied"
         "404":
@@ -592,7 +592,7 @@ definitions:
         type: "string"
       content:
         type: "string"
-  Plant:
+  RefPlant:
     type: "object"
     required:
       - "title"
