# internal/api/handlers/plants/plants.go
@@ -1,13 +1,0 @@
-package plants
-
-import (
-	"context"
-
-	"github.com/kaatinga/plantbook/internal/api/models"
-	"github.com/kaatinga/plantbook/internal/api/restapi/operations/plant"
-)
-
-type RepoInterface interface {
-	GetPlants(ctx context.Context, params plant.GetPlantsParams) ([]*models.Plant, error)
-	GetPlantByID(ctx context.Context, id int64) (*models.Plant, error)
-}
