# internal/api/restapi/operations/plant/get_plants.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package plant
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// GetPlantsHandlerFunc turns a function with the right signature into a get plants handler
-type GetPlantsHandlerFunc func(GetPlantsParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn GetPlantsHandlerFunc) Handle(params GetPlantsParams) middleware.Responder {
-	return fn(params)
-}
-
-// GetPlantsHandler interface for that can handle valid get plants params
-type GetPlantsHandler interface {
-	Handle(GetPlantsParams) middleware.Responder
-}
-
-// NewGetPlants creates a new http.Handler for the get plants operation
-func NewGetPlants(ctx *middleware.Context, handler GetPlantsHandler) *GetPlants {
-	return &GetPlants{Context: ctx, Handler: handler}
-}
-
-/* GetPlants swagger:route GET /api/v1/plants plant getPlants
-
-find plants
-
-find reference plants by parameters or all
-
-*/
-type GetPlants struct {
-	Context *middleware.Context
-	Handler GetPlantsHandler
-}
-
-func (o *GetPlants) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewGetPlantsParams()
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
