# internal/api/restapi/operations/refplant/get_ref_plant_by_id_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package plant
+package refplant
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -14,24 +14,24 @@ import (
 	"github.com/go-openapi/swag"
 )
 
-// NewGetPlantByIDParams creates a new GetPlantByIDParams object
+// NewGetRefPlantByIDParams creates a new GetRefPlantByIDParams object
 //
 // There are no default values defined in the spec.
-func NewGetPlantByIDParams() GetPlantByIDParams {
+func NewGetRefPlantByIDParams() GetRefPlantByIDParams {
 
-	return GetPlantByIDParams{}
+	return GetRefPlantByIDParams{}
 }
 
-// GetPlantByIDParams contains all the bound params for the get plant by Id operation
+// GetRefPlantByIDParams contains all the bound params for the get ref plant by Id operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters getPlantById
-type GetPlantByIDParams struct {
+// swagger:parameters getRefPlantById
+type GetRefPlantByIDParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
 
-	/*ID of plant to return
+	/*ID of reference plant to return
 	  Required: true
 	  In: path
 	*/
@@ -41,8 +41,8 @@ type GetPlantByIDParams struct {
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewGetPlantByIDParams() beforehand.
-func (o *GetPlantByIDParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewGetRefPlantByIDParams() beforehand.
+func (o *GetRefPlantByIDParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
@@ -58,7 +58,7 @@ func (o *GetPlantByIDParams) BindRequest(r *http.Request, route *middleware.Matc
 }
 
 // bindID binds and validates parameter ID from path.
-func (o *GetPlantByIDParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+func (o *GetRefPlantByIDParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
 	var raw string
 	if len(rawData) > 0 {
 		raw = rawData[len(rawData)-1]
