# internal/api/restapi/operations/refplant/get_ref_plants_urlbuilder.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package plant
+package refplant
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -13,8 +13,8 @@ import (
 	"github.com/go-openapi/swag"
 )
 
-// GetPlantsURL generates an URL for the get plants operation
-type GetPlantsURL struct {
+// GetRefPlantsURL generates an URL for the get ref plants operation
+type GetRefPlantsURL struct {
 	Category          *int32
 	Classifiers       *string
 	FloweringTime     *string
@@ -34,7 +34,7 @@ type GetPlantsURL struct {
 // WithBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *GetPlantsURL) WithBasePath(bp string) *GetPlantsURL {
+func (o *GetRefPlantsURL) WithBasePath(bp string) *GetRefPlantsURL {
 	o.SetBasePath(bp)
 	return o
 }
@@ -42,15 +42,15 @@ func (o *GetPlantsURL) WithBasePath(bp string) *GetPlantsURL {
 // SetBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *GetPlantsURL) SetBasePath(bp string) {
+func (o *GetRefPlantsURL) SetBasePath(bp string) {
 	o._basePath = bp
 }
 
 // Build a url path and query string
-func (o *GetPlantsURL) Build() (*url.URL, error) {
+func (o *GetRefPlantsURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/api/v1/plants"
+	var _path = "/api/v1/refplants"
 
 	_basePath := o._basePath
 	if _basePath == "" {
@@ -140,7 +140,7 @@ func (o *GetPlantsURL) Build() (*url.URL, error) {
 }
 
 // Must is a helper function to panic when the url builder returns an error
-func (o *GetPlantsURL) Must(u *url.URL, err error) *url.URL {
+func (o *GetRefPlantsURL) Must(u *url.URL, err error) *url.URL {
 	if err != nil {
 		panic(err)
 	}
@@ -151,17 +151,17 @@ func (o *GetPlantsURL) Must(u *url.URL, err error) *url.URL {
 }
 
 // String returns the string representation of the path with query string
-func (o *GetPlantsURL) String() string {
+func (o *GetRefPlantsURL) String() string {
 	return o.Must(o.Build()).String()
 }
 
 // BuildFull builds a full url with scheme, host, path and query string
-func (o *GetPlantsURL) BuildFull(scheme, host string) (*url.URL, error) {
+func (o *GetRefPlantsURL) BuildFull(scheme, host string) (*url.URL, error) {
 	if scheme == "" {
-		return nil, errors.New("scheme is required for a full url on GetPlantsURL")
+		return nil, errors.New("scheme is required for a full url on GetRefPlantsURL")
 	}
 	if host == "" {
-		return nil, errors.New("host is required for a full url on GetPlantsURL")
+		return nil, errors.New("host is required for a full url on GetRefPlantsURL")
 	}
 
 	base, err := o.Build()
@@ -175,6 +175,6 @@ func (o *GetPlantsURL) BuildFull(scheme, host string) (*url.URL, error) {
 }
 
 // StringFull returns the string representation of a complete url
-func (o *GetPlantsURL) StringFull(scheme, host string) string {
+func (o *GetRefPlantsURL) StringFull(scheme, host string) string {
 	return o.Must(o.BuildFull(scheme, host)).String()
 }
